maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:23: error: ambiguous reference to overloaded definition,
both method keepHandOnSideWall in class Escaper of type ()Unit
and  method keepHandOnSideWall in class Escaper of type ()Unit
match argument types ()
keepHandOnSideWall(); 
^Escaper:13: error: method keepHandOnSideWall is defined twice
  conflicting symbols both originated in file 'plm.runtime2.Escaper'
def keepHandOnSideWall() {
    ^