maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall() {
while (!estSurBiscuit) {
while (!estFaceMur()) {
gauche();
}
while (estFaceMur()) {
droite();
}
avance();
}
prendBiscuit();
}
def keepHandOnSideWall() {
while (!estSurBiscuit) {
gauche();
while (estFaceMur()) {
droite();
}
avance();
}
prendBiscuit();
}
keepHandOnSideWall();